Test for RpcMain Java class method invocation.
Minor corrections.